# OceanVisServer

./: CMakeLists.txt  OceanVisServer.files  OceanVisServer.includes  OceanVisServer.kdev4
examples/: PO4-5000.petsc  ideep.txt  ideep_10_0.txt  ideep_1_0.txt  ideep_5_0.txt  medium.conf  petsc-format  small.petsc  small.txt  test.conf
examples/test/: medium02.petsc  small01.petsc  small02.petsc  small03.petsc  small04.petsc  small05.petsc  small06.petsc  small07.petsc  small08.petsc  small09.petsc  small10.petsc  smallmedium01.petsc  smallmedium02.petsc  smallmedium03.petsc  smallmedium04.petsc  smallmedium05.petsc  smallmedium06.petsc  smallmedium07.petsc  smallmedium08.petsc  smallmedium09.petsc  smallmedium10.petsc
src/: CMakeLists.txt  ColorMapWidget.h  OceanVisServer.cpp  OceanVisServer.h  main.cpp
src/client/: CMakeLists.txt  ColorMapWidget.cpp  ColorMapWidget.h  CoverageComboBox.cpp  CoverageComboBox.h  DimensionSliders.cpp  DimensionSliders.h  DimensionSliders.ui  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  ViewModeComboBox.cpp  ViewModeComboBox.h  main.cpp
src/lib/: BadDimensionString.cpp  BadDimensionString.h  BadDimensionTypeException.cpp  BadDimensionTypeException.h  BadSlicePosition.cpp  BadSlicePosition.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  ConfigurationParser.cpp  ConfigurationParser.h  Constant.cpp  Constant.h  CoordinateAxis.cpp  CoordinateAxis.h  Coverage.cpp  Coverage.h  CoveragesParser.cpp  CoveragesParser.h  DataLayer.cpp  DataLayer.h  DataMatrix.cpp  DataMatrix.h  DescribeCoverages.cpp  DescribeCoverages.h  Dimension.cpp  Dimension.h  DimensionSlice.cpp  DimensionSlice.h  DimensionSubset.cpp  DimensionSubset.h  DimensionSubset_p.h  DimensionTrim.cpp  DimensionTrim.h  GetCoverage.cpp  GetCoverage.h  GetMap.cpp  GetMap.h  (+17 more)
src/server/: CMakeLists.txt  OceanVisServer.cpp  OceanVisServer.h  main.cpp
src/tests/: CMakeLists.txt  SpeedTest.sh  TestCoordinateAxis.cpp  TestDataLayer.cpp  TestDataMatrix.cpp  TestDimensionSlice.cpp  TestDimensionSubset.cpp  TestDimensionTrim.cpp  TestGridCoverage.cpp  TestMapGeometry.cpp  TestMapGeometryParser.cpp
